@startuml C4_ClassDiagram
!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Container.puml
!include <C4/C4>
!include <C4/C4_Context>
!include <C4/C4_Component>
top to bottom direction

title ClassDiagram - Google Maps + MapBox (C4)
Container_Boundary("boundary", "Class Diagram"){

  Interface MapService {
    +Route getRoute(Coordinate start, Coordinate end)
    +MapImage getMap(Coordinate location, int zoomLevel)
  }

  class GoogleMapsService {
    +Route getRoute(Coordinate start, Coordinate end)
    +MapImage getMap(Coordinate location, int zoomLevel)
    +someGoogleSpecificMethod()
  }

  class MapBoxService {
    +Route getRoute(Coordinate start, Coordinate end)
    +MapImage getMap(Coordinate location, int zoomLevel)
    +someMapBoxSpecificMethod()
  }

  class MapController {
    +void handleRequest(Request request)
  }

  class MapServiceFactory {
    +MapService createService(String provider)
  }

'  class Coordinate {
'    +double latitude
'    +double longitude
'  }
'
'  class Route {
'    +List<Coordinate> points
'  }
'
'  class MapImage {
'    +byte[] imageData
'  }

  MapController --> MapService : uses
  MapController --> MapServiceFactory : uses
  MapServiceFactory --> GoogleMapsService : creates
  MapServiceFactory --> MapBoxService : creates
  GoogleMapsService ..|> MapService : implements
  MapBoxService ..|> MapService : implements

}

@enduml
